force-app/main/default/objects/NewsScope__c/NewsScope__c.object-meta.xml
<CustomObject>
    <label>NewsScope</label>
    <pluralLabel>NewsScopes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>NewsScope Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>