force-app/main/default/objects/NewsScope__c/fields/Dates__c.field-meta.xml
<CustomField>
    <fullName>Dates__c</fullName>
    <label>Dates</label>
    <type>Lookup</type>
    <referenceTo>Date__c</referenceTo>
    <relationshipName>NewsScope_Dates</relationshipName>
</CustomField>