force-app/main/default/objects/NewsScope__c/fields/Freshness__c.field-meta.xml
<CustomField>
    <fullName>Freshness__c</fullName>
    <label>Freshness</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>