force-app/main/default/objects/NewsScope__c/fields/Strings__c.field-meta.xml
<CustomField>
    <fullName>Strings__c</fullName>
    <label>Strings</label>
    <type>Lookup</type>
    <referenceTo>String__c</referenceTo>
    <relationshipName>NewsScope_Strings</relationshipName>
</CustomField>