force-app/main/default/objects/NewsScope__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <label>Tags</label>
    <type>Lookup</type>
    <referenceTo>Tag__c</referenceTo>
    <relationshipName>NewsScope_Tags</relationshipName>
</CustomField>