force-app/main/default/objects/NewsScope__c/fields/Values__c.field-meta.xml
<CustomField>
    <fullName>Values__c</fullName>
    <label>Values</label>
    <type>Lookup</type>
    <referenceTo>Values__c</referenceTo>
    <relationshipName>NewsScope_Values</relationshipName>
</CustomField>